@@ -38572,3 +38572,8 @@ Don't attempt to force linking a function that is not visible. See:
   install_msw.sh
 Try to avoid an antimalware issue.
 
+20160130T2139Z <gchicares@sbcglobal.net> [455]
+
+  install_msw.sh
+Exploit at least minimal parallelism by default.
+
